--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -20,8 +21,25 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <form onsubmit="event.preventDefault()" class="box">
+                        <h1>SignUp</h1>
+                        <p class="text-muted"> Please enter your login and password!</p>
+                        <input type="text" name="" placeholder="Username">
+                        <input type="password" name="" placeholder="Password">
+                        <input type="text" name="" placeholder="Phone">
+                        <input type="text" name="" placeholder="Address">
+                        <a class="forgot text-muted" href="login.html">Already Have an Account?</a>
+                        <input type="submit" name="" value="SignUp" href="#">
 
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-<script src="app.js"></script>
 
 </html>
