--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     <form onsubmit="event.preventDefault()" class="box">
                         <h1>Login</h1>
                         <p class="text-muted"> Please enter your login and password!</p>
-                        <input type="text" name="" placeholder="Username">
+                        <input type="text" name="" placeholder="Email">
                         <input type="password" name="" placeholder="Password">
                         <a class="forgot text-muted" href="signup.html">Don't Have an Account?</a>
                         <input type="submit" name="" value="Login" href="#">
