--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,8 @@
                     <form onsubmit="event.preventDefault()" class="box">
                         <h1>SignUp</h1>
                         <p class="text-muted"> Please enter your login and password!</p>
-                        <input type="text" name="" placeholder="Username">
+                        <input type="text" name="" placeholder="Name">
+                        <input type="text" name="" placeholder="Email">
                         <input type="password" name="" placeholder="Password">
                         <input type="text" name="" placeholder="Phone">
                         <input type="text" name="" placeholder="Address">
