--- a/signup.html
+++ b/signup.html
@@ -28,11 +28,11 @@
                     <form onsubmit="event.preventDefault()" class="box">
                         <h1>SignUp</h1>
                         <p class="text-muted"> Please enter your login and password!</p>
-                        <input type="text" name="" placeholder="Name">
-                        <input type="text" name="" placeholder="Email">
-                        <input type="password" name="" placeholder="Password">
-                        <input type="text" name="" placeholder="Phone">
-                        <input type="text" name="" placeholder="Address">
+                        <input type="text" name="" placeholder="Name" id="name">
+                        <input type="text" name="" placeholder="Email" id="email">
+                        <input type="password" name="" placeholder="Password" id="password">
+                        <input type="text" name="" placeholder="Phone" id="phone">
+                        <input type="text" name="" placeholder="Address" id="phone">
                         <a class="forgot text-muted" href="login.html">Already Have an Account?</a>
                         <input type="submit" name="" value="SignUp" href="#">
 
