--- a/login.html
+++ b/login.html
@@ -28,8 +28,8 @@
                     <form onsubmit="event.preventDefault()" class="box">
                         <h1>Login</h1>
                         <p class="text-muted"> Please enter your login and password!</p>
-                        <input type="text" name="" placeholder="Email">
-                        <input type="password" name="" placeholder="Password">
+                        <input type="text" name="" placeholder="Email" id="email">
+                        <input type="password" name="" placeholder="Password" id="password">
                         <a class="forgot text-muted" href="signup.html">Don't Have an Account?</a>
                         <input type="submit" name="" value="Login" href="#">
 
@@ -39,5 +39,6 @@
         </div>
     </div>
 </body>
+<script src="app.js"></script>
 
 </html>
