--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
                         <input type="text" name="" placeholder="Email" id="email">
                         <input type="password" name="" placeholder="Password" id="password">
                         <input type="text" name="" placeholder="Phone" id="phone">
-                        <input type="text" name="" placeholder="Address" id="phone">
+                        <input type="text" name="" placeholder="Address" id="address">
                         <a class="forgot text-muted" href="login.html">Already Have an Account?</a>
                         <input type="submit" name="" value="SignUp" href="#">
 
