--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <form onsubmit="event.preventDefault()" class="box">
+                    <form onsubmit="return false " class="box">
                         <h1>SignUp</h1>
                         <p class="text-muted"> Please enter your login and password!</p>
                         <input type="text" name="" placeholder="Name" id="name">
@@ -34,7 +34,7 @@
                         <input type="text" name="" placeholder="Phone" id="phone">
                         <input type="text" name="" placeholder="Address" id="address">
                         <a class="forgot text-muted" href="login.html">Already Have an Account?</a>
-                        <input type="submit" name="" value="SignUp" href="#">
+                        <input type="submit" name="" value="SignUp" href="#" onclick="signup()">
 
                     </form>
                 </div>
