--- a/signup.html
+++ b/signup.html
@@ -35,8 +35,9 @@
                         <input type="text" name="" placeholder="Address" id="address">
                         <a class="forgot text-muted" href="login.html">Already Have an Account?</a>
                         <input type="submit" name="" value="SignUp" href="#" onclick="signup()">
-
+                        <div class="alert alert-dark" role="alert" id="message"></div>
                     </form>
+
                 </div>
             </div>
         </div>
