--- a/dashboard.html
+++ b/dashboard.html
@@ -23,23 +23,16 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 ">
                 <div class="card">
                     <form onsubmit="event.preventDefault()" class="box">
-                        <h1>Login</h1>
-                        <p class="text-muted"> Please enter your login and password!</p>
-                        <input type="text" name="" placeholder="Email" id="email">
-                        <input type="password" name="" placeholder="Password" id="password">
-                        <a class="forgot text-muted" href="signup.html">Don't Have an Account?</a>
-                        <input type="submit" name="" value="Login" href="#">
-                        <div class="alert alert-dark" role="alert" id="message"></div>
-                    </form>
+                        <h1>Hello</h1>
 
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script src="app.js"></script>
 
 </html>
