--- a/dashboard.html
+++ b/dashboard.html
@@ -26,13 +26,15 @@
             <div class="col-md-6 ">
                 <div class="card">
                     <form onsubmit="event.preventDefault()" class="box">
-                        <h1>Hello</h1>
-
+                        <h1 id="username"></h1>
+                        <input type="submit" name="" value="Logout" href="#" onclick="logout()">
+                        <div class="alert alert-dark" role="alert" id="message"></div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script src="app.js"></script>
 
 </html>
