--- a/screens/signup.html
+++ b/screens/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -25,13 +25,16 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <form onsubmit="return false" class="box">
-                        <h1>Login</h1>
+                    <form onsubmit="return false " class="box">
+                        <h1>SignUp</h1>
                         <p class="text-muted"> Please enter your login and password!</p>
+                        <input type="text" name="" placeholder="Name" id="name">
                         <input type="text" name="" placeholder="Email" id="email">
                         <input type="password" name="" placeholder="Password" id="password">
-                        <a class="forgot text-muted" href="signup.html">Don't Have an Account?</a>
-                        <input type="submit" name="" value="Login" href="#" onclick="login()">
+                        <input type="text" name="" placeholder="Phone" id="phone">
+                        <input type="text" name="" placeholder="Address" id="address">
+                        <a class="forgot text-muted" href="login.html">Already Have an Account?</a>
+                        <input type="submit" name="" value="SignUp" href="#" onclick="signup()">
                         <div class="alert alert-dark" role="alert" id="message"></div>
                     </form>
 
@@ -40,6 +43,6 @@
         </div>
     </div>
 </body>
-<script src="app.js"></script>
+<script src="../js/app.js"></script>
 
 </html>
