--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <div class="card">
                     <form onsubmit="event.preventDefault()" class="box">
                         <h1>Login or Register</h1>
-                        <a href="login.html" class="linkss">Login</a>
+                        <a href="screens/login.html" class="linkss">Login</a>
                         <br>
-                        <a href="signup.html" class="linkss">Signup</a>
+                        <a href="screens/signup.html" class="linkss">Signup</a>
                     </form>
                 </div>
             </div>
