--- a/screens/dashboard.html
+++ b/screens/dashboard.html
@@ -45,9 +45,9 @@
 
                 <h1>Details</h1>
 
-                <input type="text" name="" placeholder="Title" id="title">
+                <input type="text" name="" placeholder="Title" id="tit">
                 <hr>
-                <input type="text" name="" placeholder="Description" id="description">
+                <input type="text" name="" placeholder="desc" id="description">
                 <hr>
 
                 <input type="submit" name="" value="Done" href="#" onclick="setDetails() ">
@@ -60,20 +60,7 @@
 
         </div>
         <div class="col-md-4 ">
-            <div class="card">
-
-                <h1>Details</h1>
-
-                <h3 id="getTitle"></h3>
-                <h3 id="getDescription"></h3>
-
-
-
-
-
-
-
-            </div>
+            <div id="posts"></div>
 
         </div>
     </div>
