--- a/screens/home.html
+++ b/screens/home.html
@@ -51,9 +51,10 @@
     <div id="content" class="p-4 p-md-5">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <button type="button" id="sidebarCollapse" class="btn btn-primary">
-            <i class="fa fa-user"></i>
-            <span class="sr-only">Toggle Menu</span>
+          <button type="button" id="sidebarCollapse" class="btn btn-primary"><i class="fa fa-user"></i> Profile</button>
+
+
+          <span class="sr-only">Toggle Menu</span>
           </button>
         </div>
       </nav>
