--- a/screens/home.html
+++ b/screens/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Sidebar 01</title>
+  <title>Home Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
