--- a/screens/home.html
+++ b/screens/home.html
@@ -29,10 +29,10 @@
             <a href="#" id="getemail"></a>
           </li>
           <li>
-            <a href="#" id="getphone">Contact</a>
+            <a href="#" id="getphone"></a>
           </li>
           <li>
-            <a href="#" id="getphone" id="getaddress">Contact</a>
+            <a href="#" id="getaddress"></a>
           </li>
           <br>
           <li>
